--- a/download.html
+++ b/download.html
@@ -11,10 +11,10 @@
 食べコミュ ver.1.0<br />
 <br />
 Kindle用レジアプリ<br />
-<a href="tabecomuregi.apk">食べコミュレジ</a><br />
+<a href="app/tabecomuregi.apk">食べコミュレジ</a><br />
 <br />
 スマホ用アプリ<br />
-<a href="tabecomu.apk">食べコミュ</a><br />
+<a href="app/tabecomu.apk">食べコミュ</a><br />
 <br />
 </body>
 </html>
