--- a/shop_download.html
+++ b/shop_download.html
@@ -13,28 +13,24 @@
 Kindle用レジアプリ<br />
 <br />
 わくわく館DEMO食堂　様<br />
-<br />
-<a href="/app/BsDcnHqN/G999999999.apk">テストDB使用</a><br />
-<br />
-<a href="/app/genDuDzT/G999990001.apk">本番DB使用</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G999990001/tabecomuregi.apk">計算式修正版</a><br />
 <br />
 <br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000010001/tabecomuregi.apk">わくわく館 オオイタリアン食堂　様</a><br />
 <br />
-<a href="/app/JAwZRaeL/G000010001.apk">わくわく館 オオイタリアン食堂　様</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000020001/tabecomuregi.apk">ヴィア デッラ キエーザ　様</a><br />
 <br />
-<a href="/app/PCBbSzQh/G000020001.apk">ヴィア デッラ キエーザ　様</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000030001/tabecomuregi.apk">おとうふカフェ　beans cafe　様</a><br />
 <br />
-<a href="/app/QFxpMKDY/G000030001.apk">おとうふカフェ　beans cafe　様</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000040001/tabecomuregi.apk">ボレロ食堂　様</a><br />
 <br />
-<a href="/app/RZkmJjgA/G000040001.apk">ボレロ食堂　様</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000050001/tabecomuregi.apk">炉ばた屋　水や空　様</a><br />
 <br />
-<a href="/app/TPvwwPLB/G000050001.apk">炉ばた屋　水や空　様</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000060001/tabecomuregi.apk">ゆずの雫　大分駅前店　様</a><br />
 <br />
-<a href="/app/uTkvvcJf/G000060001.apk">ゆずの雫　大分駅前店　様</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000070001/tabecomuregi.apk">菊家総本店　様</a><br />
 <br />
-<a href="/app/wWdQJwbu/G000070001.apk">菊家総本店　様</a><br />
+<a href="http://gtl.jp/asp/tabecomu4/app/G000080001/tabecomuregi.apk">VEGETABAR ベジタバル　様</a><br />
 <br />
-<a href="/app/YxCPNmEr/G000080001.apk">VEGETABAR ベジタバル　様</a><br />
-<br />
-</body>       
+</body>
 </html>
